[package]
name = "multisign-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Interactive CLI
inquire = "0.7"

# Radix dependencies
scrypto = "1.3.0"
radix-transactions = "1.3.0"
radix-common = "1.3.0"

# Utilities
anyhow = "1.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"